2007-07-15  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/MarkupText.py: support font and color formats.

2007-07-14  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditLdsOrd.py (_setup_fields): Typo.

2007-07-12  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (convert_notes_13): Add privacy to
	LdsOrd on upgrade.
	* src/RelLib/_LdsOrd.py (serialize,unserialize): Add privacy.

2007-07-11  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py (DbManager.__button_press): check for node == None

2007-07-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbWriteXML.py (write_date): Write datespan.
	* src/GrampsDbUtils/_ReadXML.py: (start_compound_date): Add new
	method; (start_datespan): Add new method.
	* data/grampsxml.dtd: Add datespan.
	* data/grampsxml.rng: Add datespan.

2007-07-08  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Add check for python-cairo>=1.2.6.

2007-07-08  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: Add support for Thunar, which stores the DND 
	information in a different area (and probably a more correct area) than
	Nautilus.

2007-07-08  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: handle drag-n-drop files in DbManager. Dragging an
	XML or GEDCOM file into the DbManager will create a new database and import
	the file.

2007-07-08  Brian Matherly <brian@gramps-project.org>
            Robert Cawley <rjc@cawley.id.au>
	* src/docgen/ODFDoc.py
	(write_note): Fix display of preformatted notes (#0001109)

2007-07-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDBDir.py (write_lock_file): Work around
	os.getlogin() problem on some terminals.

2007-07-07  Don Allingham  <don@gramps-project.org>
	* src/PageView.py (ListView.column_clicked): set the search column for list
	views to be the sort column
	* src/DataViews/_EventView.py: add docs
	* src/DataViews/_FamilyList.py: add docs