@@ -1,3 +1,6 @@
+2007-07-16  Piotr Czubaszek  <pioterus@gmail.com>
+	* src/plugins/rel_pl.py: Update.
+
 2007-07-15  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
 	* src/MarkupText.py: support font and color formats.
 
